syntax = "proto3";

package backend.app.api.api_vi.endpoints;

service Indicadores {
  rpc ObtemIndicadores (PpgRequest) returns (PpgResponse);
}

message PpgRequest {
    string id = 1;
    int32 anoi = 2;
    int32 anof = 3;
}

message PpgJson {
    string nome = 1;
    string json = 2;
}

message PpgResponse {
  repeated PpgJson item = 1;
}
