syntax = "proto3";

package protos;

message HomeRequest {
  string id_ies = 1;
}

message PpgRequest {
    string id_ies = 1;
    string id_ppg = 2;
    int32 anoi = 3;
    int32 anof = 4;
    string nota = 5;
}

message PpgJson {
    string nome = 1;
    string json = 2;
}

message PpgResponse {
  repeated PpgJson item = 1;
}

message LogoutRequest {
  string username = 1;
}

message LogoutResponse {
  bool logout = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  optional string avatar = 1;
  optional string nome = 2;
  optional string email  = 3;
  optional string idlattes = 4;
  bool erro = 5;
}

message UsuarioRequest {
  string username = 1;
}

message UsuarioResponse {
  string idlattes = 1;
  string email = 2;
  string full_name = 3;
  bool is_superuser = 4;
  bool is_admin = 5;
  string id_ies = 6;
}